[package]
name = "netupi_core"
version = "0.1.0"
edition = "2024"
authors = ["Gazter <gatzervi@proton.me>"]
license = "AGPL-3.0-or-later"

[lib]
name = "netupi_core"
path = "lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.47", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.3"
tokio-test = "0.4"
