[package]
name = "netupi23"
version = "0.2.3"
edition = "2024"
authors = ["Gazter <gatzervi@proton.me>"]
description = "Minimalist TimeTracker With Memory"
license = "AGPL-3.0-or-later"
repository = "https://github.com/gatzer455/netupi23"
keywords = ["cli", "pomodoro", "time-tracking", "productivity"]
categories = ["command-line-utilities"]
readme = "../README.md"


# This creates a binary named "netupi"
[[bin]]
name = "netupi"
path = "src/main.rs"

[dependencies]
# Our core functionality
netupi-core = "0.1.1"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }
# Interactive readline with history and completion
rustyline = "14.0"
# Terminal styling and colors
crossterm = "0.27"
# Date and time handling
chrono = { version = "0.4", features = ["serde"] }


[features]
default = ["with-file-history"]
with-file-history = []
